// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Diagnostics /> should handle error on loading reports 1`] = `
<div>
  <h1>
    Diagnostics
  </h1>
  <p>
    Generate a diagnostics report to simplify debugging some problems related to the router's functionality.
  </p>
  <div
    class="card p-4 mb-3"
  >
    <h2>
      Modules
    </h2>
    <p>
      Select modules which you want to include in the report.
    </p>
    <form
      class="container-fluid"
    >
      <div
        style="font-weight: bold;"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-control custom-checkbox "
          >
            <input
              checked=""
              class="custom-control-input"
              id="1"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="1"
            >
              Select all
            </label>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-md-6 col-lg-4"
        >
          <div
            class="form-group"
          >
            <div
              class="custom-control custom-checkbox "
            >
              <input
                checked=""
                class="custom-control-input"
                id="2"
                type="checkbox"
              />
              <label
                class="custom-control-label"
                for="2"
              >
                foobar_module
                <small
                  class="form-text text-muted"
                >
                  foobar_module_description
                </small>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-sm-12 col-lg-12 p-0 mb-3 text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Generate report
        </button>
      </div>
    </form>
    <h2>
      Reports
    </h2>
    <p
      class="text-center text-danger"
    >
      An error occurred while fetching data.
    </p>
  </div>
</div>
`;

exports[`<Diagnostics /> should reload reports table when new report is generated 1`] = `
<div>
  <h1>
    Diagnostics
  </h1>
  <p>
    Generate a diagnostics report to simplify debugging some problems related to the router's functionality.
  </p>
  <div
    class="card p-4 mb-3"
  >
    <h2>
      Modules
    </h2>
    <p>
      Select modules which you want to include in the report.
    </p>
    <form
      class="container-fluid"
    >
      <div
        style="font-weight: bold;"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-control custom-checkbox "
          >
            <input
              checked=""
              class="custom-control-input"
              id="1"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="1"
            >
              Select all
            </label>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-md-6 col-lg-4"
        >
          <div
            class="form-group"
          >
            <div
              class="custom-control custom-checkbox "
            >
              <input
                checked=""
                class="custom-control-input"
                id="2"
                type="checkbox"
              />
              <label
                class="custom-control-label"
                for="2"
              >
                foobar_module
                <small
                  class="form-text text-muted"
                >
                  foobar_module_description
                </small>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-sm-12 col-lg-12 p-0 mb-3 text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Generate report
        </button>
      </div>
    </form>
    <h2>
      Reports
    </h2>
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover"
        data-testid="reports-table"
      >
        <thead
          class="thead-light"
        >
          <tr>
            <th
              scope="col"
            >
              ID
            </th>
            <th
              aria-label="Actions"
              scope="col"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="align-middle"
            >
              1234
            </td>
            <td
              class="text-right"
            >
              <div
                class="btn-group btn-group-sm"
                role="group"
              >
                <a
                  class="btn btn-primary"
                  download=""
                  href="/reforis/diagnostics/api/reports/1234/contents"
                >
                  <i
                    class="fas fa-download fa-sm mr-1 align-baseline"
                  />
                  Download
                </a>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                  <i
                    class="fas fa-trash fa-sm mr-1 align-baseline"
                  />
                  Delete
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="align-middle"
            >
              5678
            </td>
            <td
              class="text-right"
            >
              <div
                class="btn-group btn-group-sm"
                role="group"
              >
                <a
                  class="btn btn-primary"
                  download=""
                  href="/reforis/diagnostics/api/reports/5678/contents"
                >
                  <i
                    class="fas fa-download fa-sm mr-1 align-baseline"
                  />
                  Download
                </a>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                  <i
                    class="fas fa-trash fa-sm mr-1 align-baseline"
                  />
                  Delete
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<Diagnostics /> should render modules and reports 1`] = `
<div>
  <h1>
    Diagnostics
  </h1>
  <p>
    Generate a diagnostics report to simplify debugging some problems related to the router's functionality.
  </p>
  <div
    class="card p-4 mb-3"
  >
    <h2>
      Modules
    </h2>
    <p>
      Select modules which you want to include in the report.
    </p>
    <form
      class="container-fluid"
    >
      <div
        style="font-weight: bold;"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-control custom-checkbox "
          >
            <input
              checked=""
              class="custom-control-input"
              id="1"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="1"
            >
              Select all
            </label>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-md-6 col-lg-4"
        >
          <div
            class="form-group"
          >
            <div
              class="custom-control custom-checkbox "
            >
              <input
                checked=""
                class="custom-control-input"
                id="2"
                type="checkbox"
              />
              <label
                class="custom-control-label"
                for="2"
              >
                foobar_module
                <small
                  class="form-text text-muted"
                >
                  foobar_module_description
                </small>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-sm-12 col-lg-12 p-0 mb-3 text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Generate report
        </button>
      </div>
    </form>
    <h2>
      Reports
    </h2>
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover"
        data-testid="reports-table"
      >
        <thead
          class="thead-light"
        >
          <tr>
            <th
              scope="col"
            >
              ID
            </th>
            <th
              aria-label="Actions"
              scope="col"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="align-middle"
            >
              1234
            </td>
            <td
              class="text-right"
            >
              <div
                class="btn-group btn-group-sm"
                role="group"
              >
                <a
                  class="btn btn-primary"
                  download=""
                  href="/reforis/diagnostics/api/reports/1234/contents"
                >
                  <i
                    class="fas fa-download fa-sm mr-1 align-baseline"
                  />
                  Download
                </a>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                  <i
                    class="fas fa-trash fa-sm mr-1 align-baseline"
                  />
                  Delete
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
